# 1c-configuration-indexer

./: .gitignore  README.md  pyproject.toml
docs/: agent-runbook.ru.md
examples/: indexing-job.example.json
src/configuration_indexer/: bsl.py  cli.py  detector.py  embeddings.py  indexer.py  package.py  package_uploader.py  project.py  v2.py  xml_utils.py
tests/: test_bsl_calls.py  test_object_cards.py  test_package.py  test_package_uploader.py  test_project_discovery.py  test_run_job.py  test_v2_package.py
