[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configuration-indexer"
version = "0.1.0"
description = "Local indexer for 1C configuration XML/BSL exports."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "tarasov46" }]
dependencies = []

[project.scripts]
configuration-indexer = "configuration_indexer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
